--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "postcss-calc": "^7.0.1",
     "postcss-css-variables": "^0.13.0",
     "postcss-import": "^12.0.1",
-    "postcss-media-variables": "^2.0.1",
     "postcss-nested": "^4.1.2"
+  },
+  "devDependencies": {
+    "postcss-custom-media": "^7.0.8"
   }
 }
