--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@babel/core": "^7.6.0",
     "@babel/preset-env": "^7.6.0",
+    "autoprefixer": "^9.6.1",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-postcss": "^8.0.0",
@@ -24,6 +25,7 @@
     "postcss-nested": "^4.1.2"
   },
   "devDependencies": {
-    "postcss-custom-media": "^7.0.8"
+    "postcss-custom-media": "^7.0.8",
+    "postcss-custom-properties": "^9.0.2"
   }
 }
