--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "unobtainium",
+  "name": "Olivero PoC",
   "version": "1.0.0",
-  "description": "Front-end theme for Ames Lab",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "build": "gulp build",
-    "watch": "gulp watch",
-    "refresh": "./refresh.sh"
+    "watch": "gulp watch"
   },
   "author": "",
   "license": "ISC",
@@ -20,7 +19,6 @@
     "gulp-sourcemaps": "^2.6.5",
     "perfectionist": "^2.4.0",
     "postcss-calc": "^7.0.1",
-    "postcss-css-variables": "^0.13.0",
     "postcss-import": "^12.0.1",
     "postcss-nested": "^4.1.2"
   },
