--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Olivero PoC",
+  "name": "Olivero-PoC",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -20,7 +20,8 @@
     "perfectionist": "^2.4.0",
     "postcss-calc": "^7.0.1",
     "postcss-import": "^12.0.1",
-    "postcss-nested": "^4.1.2"
+    "postcss-nested": "^4.1.2",
+    "postcss-rtl": "^1.5"
   },
   "devDependencies": {
     "postcss-custom-media": "^7.0.8",
